--- a/RMS.App/Views/Employees/Create.cshtml
+++ b/RMS.App/Views/Employees/Create.cshtml
@@ -1,6 +1,4 @@
-﻿@using System.Web.Mvc.Html
-@using System.Web.UI.WebControls
-@model RMS.App.ViewModels.EmployeeViewModel
+﻿@model RMS.App.ViewModels.EmployeeViewModel
 
 @{
     ViewBag.Title = "Create";
@@ -8,6 +6,10 @@
 
 
 <h2>Create</h2>
+@using (Html.BeginForm())
+            {
+    @Html.AntiForgeryToken()
+
 <div class="container">
     <ul class="nav nav-tabs">
         <li class="active"><a data-toggle="tab" href="#home">&nbsp; Read this Carefully &nbsp;&nbsp;</a></li>
@@ -18,17 +20,18 @@
 
     <div class="tab-content">
         <div id="home" class="tab-pane fade in active">
-            This is your information
+            A Registered Employment Agreement (REA) is a collective agreement made between a trade union or unions and either an individual employer, a group of employers or an employers’ organisation. An REA can set the pay and conditions of employment of the workers specified in the agreement. An REA must be registered with the Labour Court. The effect of registration makes the REA binding on the subscribing parties.
+
+            An REA must contain a disputes procedure that is binding on the parties to the agreement. Any breaches of an REA may be referred to the WRC.
+
+            The Industrial Relations (Amendment) Act 2015 provides for a system of registered employment agreements. Section 8 of the Act requires that the Labour Court keep a register of employment agreements.
         </div>
       
 
 
         <div id="menu1" class="tab-pane fade">
 
-            @using (Html.BeginForm())
-            {
-                @Html.AntiForgeryToken()
-
+            
                 <div class="form-horizontal">
 
                     <hr />
@@ -80,95 +83,116 @@
                                 </div>
                                 <br />
                                 <div class="row">
-                                    @Html.LabelFor(model => model.BloodGroup, htmlAttributes: new { @class = "control-label col-md-3" })
+                                    @Html.LabelFor(model => model.BloodGroup, htmlAttributes: new {@class = "control-label col-md-3"})
                                     <div class="col-md-9">
-                                        @Html.EditorFor(model => model.BloodGroup, new { htmlAttributes = new { @class = "form-control" } })
-                                        @Html.ValidationMessageFor(model => model.BloodGroup, "", new { @class = "text-danger" })
+                                        @Html.EditorFor(model => model.BloodGroup, new {htmlAttributes = new {@class = "form-control"}})
+                                        @Html.ValidationMessageFor(model => model.BloodGroup, "", new {@class = "text-danger"})
                                     </div>
                                 </div>
-                            </div>
-                            <div class="col-md-6">
-                                <h3 class="col-md-offset-3">Office Info</h3><br />
-                                <div class="row">
-                                    @Html.LabelFor(model => model.OrganizationId, htmlAttributes: new { @class = "control-label col-md-3" })
-                                    <div class="col-md-9">
-                                        @Html.DropDownList("OrganizationId", null, "Select", htmlAttributes: new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(model => model.OrganizationId, "", new { @class = "text-danger" })
-                                    </div>
-                                </div>
-                                <br />
-                                <div class="row">
-                                    @Html.LabelFor(model => model.DepartmentId, htmlAttributes: new { @class = "control-label col-md-3" })
-                                    <div class="col-md-9">
-                                        @Html.DropDownList("DepartmentId", null, "Select", htmlAttributes: new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(model => model.DepartmentId, "", new { @class = "text-danger" })
-                                    </div>
-                                </div>
-                                <br />
-                                <div class="row">
-                                    @Html.LabelFor(model => model.DesignationId, htmlAttributes: new { @class = "control-label col-md-3" })
-                                    <div class="col-md-9">
-                                        @Html.DropDownList("DesignationId", null, "Select", htmlAttributes: new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(model => model.DesignationId, "", new { @class = "text-danger" })
+                                <br/>
+                                <div class="form-group">
+                                    <div class="col-md-offset-2 col-md-10">
+                                        <ul class="nav nav-tabs">
+                                             <li><a data-toggle="tab" href="#menu2">Next</a></li>
+                                        </ul>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <br />
-                        <div class="row border">
-                            <div class="col-md-12">
-                                <br />
-
-                                <div class="row">
-                                    <div class="col-md-6">
-                                        <h3 class="col-md-offset-3">Present Address</h3>
-                                        @Html.LabelFor(model => model.PresentAddress, htmlAttributes: new { @class = "control-label col-md-5" })
-                                        <div class="col-md-9">
-                                            @Html.EditorFor(model => model.PresentAddress, new { htmlAttributes = new { @class = "form-control", PlaceHolder = "House no: Flat No: Vill: Post: District: Division:" } })
-                                            @Html.ValidationMessageFor(model => model.PresentAddress, "", new { @class = "text-danger" })
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-md-6">
-                                        <h3 class="col-md-offset-3">Pemanant Address</h3><br />
-                                        @Html.LabelFor(model => model.PermanentAddress, htmlAttributes: new { @class = "control-label col-md-5" })
-                                        <div class="col-md-9">
-                                            @Html.EditorFor(model => model.PermanentAddress, new { htmlAttributes = new { @class = "form-control", PlaceHolder = "House no: Flat No: Vill: Post: District: Division:" } })
-                                            @Html.ValidationMessageFor(model => model.PermanentAddress, "", new { @class = "text-danger" })
-                                        </div>
-                                    </div>
-                                </div>
-                                <br />
-                            </div>
-
-                        </div>
+                        
 
                     </div>
                     <br />
 
-                    <div class="form-group">
-                        <div class="col-md-offset-2 col-md-10">
-                            <input type="submit" value="Create" class="btn btn-default" />
-                            @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-info" })
-                        </div>
-                    </div>
+                    
                 </div>
 
-            }
+            
 
 
-        </div>
-        <div id="menu2" class="tab-pane fade">
-           
         </div>
         <div id="menu3" class="tab-pane fade">
-            
+
+            <div class="col-md-6">
+                <h3 class="col-md-offset-3">Office Info</h3><br />
+                <div class="row">
+                    @Html.LabelFor(model => model.OrganizationId, htmlAttributes: new { @class = "control-label col-md-3" })
+                    <div class="col-md-9">
+                        @Html.DropDownList("OrganizationId", null, "Select", htmlAttributes: new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.OrganizationId, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <br />
+                <div class="row">
+                    @Html.LabelFor(model => model.DepartmentId, htmlAttributes: new { @class = "control-label col-md-3" })
+                    <div class="col-md-9">
+                        @Html.DropDownList("DepartmentId", null, "Select", htmlAttributes: new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.DepartmentId, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <br />
+                <div class="row">
+                    @Html.LabelFor(model => model.DesignationId, htmlAttributes: new {@class = "control-label col-md-3"})
+                    <div class="col-md-9">
+                        @Html.DropDownList("DesignationId", null, "Select", htmlAttributes: new {@class = "form-control"})
+                        @Html.ValidationMessageFor(model => model.DesignationId, "", new {@class = "text-danger"})
+                    </div>
+                </div>
+                <br/>
+                <br/>
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="submit" value="Save" class="btn btn-default" />
+                        @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-info" })
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="menu2" class="tab-pane fade">
+            <div class="row border">
+                <div class="col-md-12">
+                    <br />
+
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h3 class="col-md-offset-3">Present Address</h3>
+                            @Html.LabelFor(model => model.PresentAddress, htmlAttributes: new { @class = "control-label col-md-5" })
+                            <div class="col-md-9">
+                                @Html.EditorFor(model => model.PresentAddress, new { htmlAttributes = new { @class = "form-control", PlaceHolder = "House no: Flat No: Vill: Post: District: Division:" } })
+                                @Html.ValidationMessageFor(model => model.PresentAddress, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h3 class="col-md-offset-3">Pemanant Address</h3><br/>
+                            @Html.LabelFor(model => model.PermanentAddress, htmlAttributes: new {@class = "control-label col-md-5"})
+                            <div class="col-md-9">
+                                @Html.EditorFor(model => model.PermanentAddress, new {htmlAttributes = new {@class = "form-control", PlaceHolder = "House no: Flat No: Vill: Post: District: Division:"}})
+                                @Html.ValidationMessageFor(model => model.PermanentAddress, "", new {@class = "text-danger"})
+                            </div>
+                        </div>
+                    </div>
+                    <br/>
+                    <div class="form-group">
+                        <div class="col-md-offset-2 col-md-10">
+                            <ul class="nav nav-tabs">
+                                <li><a data-toggle="tab" href="#menu3">Next</a></li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    
+                    <br />
+                </div>
+
+            </div>
         </div>
     </div>
 </div>
 
-
+}
 
 
 @section Scripts {
