--- a/RMS.App/Views/Requisitions/Requests.cshtml
+++ b/RMS.App/Views/Requisitions/Requests.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<RMS.App.ViewModels.RequisitionViewModel>
 
 @{
-    Layout = null;
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <!DOCTYPE html>
@@ -9,7 +9,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>RequisitionList</title>
+    <title>Requests</title>
 </head>
 <body>
     <p>
@@ -17,9 +17,6 @@
     </p>
     <table class="table">
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Employee.FullName)
-            </th>
             <th>
                 @Html.DisplayNameFor(model => model.FromPlace)
             </th>
@@ -35,14 +32,17 @@
             <th>
                 @Html.DisplayNameFor(model => model.Description)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.RequestFor)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.EmployeeId)
+            </th>
             <th></th>
         </tr>
     
     @foreach (var item in Model) {
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Employee.FullName)
-            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.FromPlace)
             </td>
@@ -59,7 +59,13 @@
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
+                @Html.DisplayFor(modelItem => item.RequestFor)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.EmployeeId)
+            </td>
+            <td>
+                @Html.ActionLink("Assign Vehicle", "Assign", new { id=item.Id }) |
                 @Html.ActionLink("Details", "Details", new { id=item.Id }) |
                 @Html.ActionLink("Delete", "Delete", new { id=item.Id })
             </td>
