Employe required migration added

--- a/RMS.App/Views/Vehicles/Delete.cshtml
+++ b/RMS.App/Views/Vehicles/Delete.cshtml
@@ -50,7 +50,13 @@
         <dd>
             @Html.DisplayFor(model => model.ChassisNo)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.SeatCapacity)
+        </dt>
 
+        <dd>
+            @Html.DisplayFor(model => model.SeatCapacity)
+        </dd>
     </dl>
 
     @using (Html.BeginForm()) {
