--- a/RMS.App/Views/Vehicles/Details.cshtml
+++ b/RMS.App/Views/Vehicles/Details.cshtml
@@ -49,7 +49,13 @@
         <dd>
             @Html.DisplayFor(model => model.ChassisNo)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.SeatCapacity)
+        </dt>
 
+        <dd>
+            @Html.DisplayFor(model => model.SeatCapacity)
+        </dd>
     </dl>
 </div>
 <p>
