--- a/RMS.App/Views/Vehicles/Edit.cshtml
+++ b/RMS.App/Views/Vehicles/Edit.cshtml
@@ -50,6 +50,14 @@
         </div>
 
         <div class="form-group row">
+            @Html.LabelFor(model => model.SeatCapacity, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-2">
+                @Html.EditorFor(model => model.SeatCapacity, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.SeatCapacity, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group row">
             @Html.LabelFor(model => model.VehicleTypeId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-4">
                 @Html.DropDownList("VehicleTypeId", null,"Select", htmlAttributes: new { @class = "form-control" })
