Requisition Queue And Assign Requisition Added

--- a/RMS.App/Views/Shared/_MenuBar.cshtml
+++ b/RMS.App/Views/Shared/_MenuBar.cshtml
@@ -92,7 +92,7 @@
                                 <a href="#">Requisition Queue</a>
                                 <ul>
                                     <li>@Html.ActionLink("Requisitions", "Requests", "AssignRequisitions")</li>
-                                    <li>@Html.ActionLink("List Of Vehicle", "Index", "Vehicles")</li>
+                                    <li>@Html.ActionLink("Assigned Requisitions", "Index", "AssignRequisitions")</li>
 
                                 </ul>
                             </li>
