--- a/RMS.App/Views/AssignRequisitions/Edit.cshtml
+++ b/RMS.App/Views/AssignRequisitions/Edit.cshtml
@@ -10,7 +10,7 @@
         @Html.AntiForgeryToken()
         
         <div class="form-horizontal">
-            <h4>AssignRequisition</h4>
+            <h4>Update Assign Requisition</h4>
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             @Html.HiddenFor(model => model.Id)
@@ -24,7 +24,7 @@
             </div>
     
             <div class="form-group">
-                @Html.LabelFor(model => model.VehicleId, "VehicleId", htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.VehicleId, "Vehicle Reg No", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     @Html.DropDownList("VehicleId", null, htmlAttributes: new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.VehicleId, "", new { @class = "text-danger" })
@@ -34,7 +34,7 @@
            
     
             <div class="form-group">
-                @Html.LabelFor(model => model.EmployeeId, "EmployeeId", htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.EmployeeId, "Driver Name", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     @Html.DropDownList("EmployeeId", null, htmlAttributes: new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.EmployeeId, "", new { @class = "text-danger" })
