Employee model and view changed

--- a/RMS.App/Views/Employees/Delete.cshtml
+++ b/RMS.App/Views/Employees/Delete.cshtml
@@ -76,19 +76,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.PermanentAddress)
+            @Html.DisplayNameFor(model => model.DrivingLicence)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.PermanentAddress)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.PresentAddress)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PresentAddress)
+            @Html.DisplayFor(model => model.DrivingLicence)
         </dd>
 
         <dt>
