--- a/RMS.App/Views/Employees/Edit.cshtml
+++ b/RMS.App/Views/Employees/Edit.cshtml
@@ -49,6 +49,14 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.DrivingLicence, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-6">
+                @Html.EditorFor(model => model.DrivingLicence, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.DrivingLicence, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
             @Html.LabelFor(model => model.BloodGroup, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-6">
                 @Html.EditorFor(model => model.BloodGroup, new { htmlAttributes = new { @class = "form-control" } })
@@ -83,11 +91,11 @@
         <div class="row">
             <div class="col-md-6">
                 <h3 class="col-md-offset-3">Present Address</h3>
-                @Html.LabelFor(model => model.PresentAddress, htmlAttributes: new { @class = "control-label col-md-5" })
+                @*@Html.LabelFor(model => model.PresentAddress, htmlAttributes: new { @class = "control-label col-md-5" })
                 <div class="col-md-9">
                     @Html.EditorFor(model => model.PresentAddress, new { htmlAttributes = new { @class = "form-control", PlaceHolder = "House no: Flat No: Vill: Post: District: Division:" } })
                     @Html.ValidationMessageFor(model => model.PresentAddress, "", new { @class = "text-danger" })
-                </div>
+                </div>*@
             </div>
 
 
@@ -95,11 +103,11 @@
         <div class="row">
             <div class="col-md-6">
                 <h3 class="col-md-offset-3">Pemanant Address</h3><br />
-                @Html.LabelFor(model => model.PermanentAddress, htmlAttributes: new { @class = "control-label col-md-5" })
+                @*@Html.LabelFor(model => model.PermanentAddress, htmlAttributes: new { @class = "control-label col-md-5" })
                 <div class="col-md-9">
                     @Html.EditorFor(model => model.PermanentAddress, new { htmlAttributes = new { @class = "form-control", PlaceHolder = "House no: Flat No: Vill: Post: District: Division:" } })
                     @Html.ValidationMessageFor(model => model.PermanentAddress, "", new { @class = "text-danger" })
-                </div>
+                </div>*@
             </div>
         </div>
 
