--- a/RMS.App/Views/Employees/Index.cshtml
+++ b/RMS.App/Views/Employees/Index.cshtml
@@ -64,10 +64,7 @@
             @Html.DisplayNameFor(model => model.BloodGroup)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.PermanentAddress)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.PresentAddress)
+            @Html.DisplayNameFor(model => model.DrivingLicence)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.EmployeeTypes)
@@ -110,11 +107,9 @@
                     @Html.DisplayFor(modelItem => item.BloodGroup)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.PermanentAddress)
+                    @Html.DisplayFor(modelItem => item.DrivingLicence)
                 </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.PresentAddress)
-                </td>
+
                 <td>
                     @Html.DisplayFor(modelItem => item.EmployeeTypes)
                 </td>
