--- a/RMS.App/Views/Requisitions/CreateRequestForOther.cshtml
+++ b/RMS.App/Views/Requisitions/CreateRequestForOther.cshtml
@@ -1,4 +1,5 @@
-﻿@model RMS.App.ViewModels.RequisitonForAnotherViewModel
+﻿@using System.Web.UI.WebControls
+@model RMS.App.ViewModels.RequisitonForAnotherViewModel
 
 @{
     Layout = null;
@@ -9,19 +10,18 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>CreateRequestForOther</title>
+    <title>Create Request For Other</title>
 </head>
 <body>
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/jqueryval")
     
+
     
     @using (Html.BeginForm("CreateRequestForOther","Requisitions",FormMethod.Post)) 
     {
         @Html.AntiForgeryToken()
         
         <div class="form-horizontal">
-            <h4>RequisitonForAnotherViewModel</h4>
+            <h4>Requisiton For Other</h4>
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="form-group">
@@ -87,9 +87,11 @@
             </div>
         </div>
     }
-    
-    <div>
-        @Html.ActionLink("Back to List", "Index")
-    </div>
+
+<div>
+    @Html.ActionLink("Back to List", "Index")
+</div>
+
+
 </body>
 </html>
