--- a/RMS.App/Views/Organizations/Details.cshtml
+++ b/RMS.App/Views/Organizations/Details.cshtml
@@ -4,38 +4,21 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Organization Details</h2>
+<hr />
+<div class="row">
+    
+    <div class="col-md-2">@Html.DisplayNameFor(model => model.Name)</div>
+    <div class="col-md-10">@Html.DisplayFor(model => model.Name)</div>
 
-<div>
-    <h4>Organization</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
+    <div class="col-md-2">@Html.DisplayNameFor(model => model.Code)</div>
+    <div class="col-md-10">@Html.DisplayFor(model => model.Code)</div>
 
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
+    <div class="col-md-2">@Html.DisplayNameFor(model => model.RegNo)</div>
+    <div class="col-md-10">@Html.DisplayFor(model => model.RegNo)</div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Code)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Code)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.RegNo)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.RegNo)
-        </dd>
-
-    </dl>
 </div>
+<br/>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id},htmlAttributes:new {@class="btn btn-warning"}) &nbsp;
     @Html.ActionLink("Back to List", "Index",null, htmlAttributes: new {@class="btn btn-info"})
