Requisition Number Added in Requisition Model

--- a/RMS.App/Views/Requisitions/Details.cshtml
+++ b/RMS.App/Views/Requisitions/Details.cshtml
@@ -17,6 +17,13 @@
         <dd>
             @Html.DisplayFor(model => model.Employee.FullName)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.RequisitionNumber)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.RequisitionNumber)
+        </dd>
 
         <dt>
             @Html.DisplayNameFor(model => model.FromPlace)
