--- a/RMS.App/Views/Shared/_MenuBar.cshtml
+++ b/RMS.App/Views/Shared/_MenuBar.cshtml
@@ -99,6 +99,7 @@
                                 <ul>
                                     <li>@Html.ActionLink("Requisitions", "Requests", "AssignRequisitions")</li>
                                     <li>@Html.ActionLink("Assigned Requisitions", "Index", "AssignRequisitions")</li>
+                                    <li>@Html.ActionLink("Requisitions Status", "Index", "RequisitionStatus")</li>
 
                                 </ul>
                             </li>
