--- a/RMS.App/Views/Departments/Index.cshtml
+++ b/RMS.App/Views/Departments/Index.cshtml
@@ -14,19 +14,19 @@
 }
 <div class="container">
     <div class="row align-items-center">
-        <div class="col-lg-6 col-sm-6 col-4 header-top-left no-padding">
+        <div class="col-lg-4 col-sm-4 col-4 header-top-left no-padding">
 
             <p>
                 @Html.ActionLink("Create New", "Create",null,new {@class="btn btn-default"})
             </p>
         </div>
 
-        <div class="col-lg-6 col-sm-6 col-8 text-right no-padding">
+        <div class="col-lg-8 col-sm-8 col-8 text-right no-padding">
             <p>
                 @using (Html.BeginForm("Index", "Departments", FormMethod.Get))
                 {
 
-                    <b>Search</b>
+                    <b>Search by (Organization/Department/Code) </b>
                     @Html.TextBox("searchText")
                     <input type="submit" value="Search" />
 
