--- a/RMS.App/Views/Organizations/Index.cshtml
+++ b/RMS.App/Views/Organizations/Index.cshtml
@@ -26,7 +26,7 @@
                 @using (Html.BeginForm("Index", "Organizations", FormMethod.Get))
                 {
                     <b>Search by (Name/Code/Reg No)</b>
-                    @Html.TextBox("searchByText")
+                    @Html.TextBox("searchText")
                     <input type="submit" value="Search" />
                 } 
             </p>
