--- a/RMS.App/Views/Designations/Details.cshtml
+++ b/RMS.App/Views/Designations/Details.cshtml
@@ -4,22 +4,14 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Designation Details</h2>
+<hr/>
+<div class="row">
+    <div class="col-md-2">@Html.DisplayNameFor(model => model.Title)</div>
+    <div class="col-md-10">@Html.DisplayFor(model => model.Title)</div>
 
-<div>
-    <h4>Designation</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Title)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Title)
-        </dd>
-
-    </dl>
 </div>
+<br />
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id },new {@class="btn btn-warning"}) &nbsp;
     @Html.ActionLink("Back to List", "Index",null,new {@class="btn btn-info" })
