--- a/RMS.App/Views/Vehicles/Details.cshtml
+++ b/RMS.App/Views/Vehicles/Details.cshtml
@@ -3,62 +3,32 @@
 @{
     ViewBag.Title = "Details";
 }
+ 
+<h2>Vehicle Details</h2>
+<hr/>
+<div class="row">
+    <div class="col-md-2">@Html.DisplayNameFor(model => model.VehicleTypeId)</div>
+    <div class="col-md-10">@Html.DisplayFor(model => model.VehicleType.Name)</div>
 
-<h2>Details</h2>
+    <div class="col-md-2">@Html.DisplayNameFor(model => model.BrandName)</div>
+    <div class="col-md-10">@Html.DisplayFor(model => model.BrandName)</div>
 
-<div>
-    <h4>Vehicle</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.VehicleTypeId)
-        </dt>
+    <div class="col-md-2">@Html.DisplayNameFor(model => model.ModelName)</div>
+    <div class="col-md-10">@Html.DisplayFor(model => model.ModelName)</div>
 
-        <dd>
-            @Html.DisplayFor(model => model.VehicleType.Name)
-        </dd>
+    <div class="col-md-2">@Html.DisplayNameFor(model => model.RegNo)</div>
+    <div class="col-md-10">@Html.DisplayFor(model => model.RegNo)</div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.BrandName)
-        </dt>
+    <div class="col-md-2">@Html.DisplayNameFor(model => model.ChassisNo)</div>
+    <div class="col-md-10">@Html.DisplayFor(model => model.ChassisNo)</div>
 
-        <dd>
-            @Html.DisplayFor(model => model.BrandName)
-        </dd>
+    <div class="col-md-2">@Html.DisplayNameFor(model => model.SeatCapacity)</div>
+    <div class="col-md-10">@Html.DisplayFor(model => model.SeatCapacity)</div>
+    <h4></h4>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.ModelName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ModelName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.RegNo)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.RegNo)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ChassisNo)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ChassisNo)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.SeatCapacity)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.SeatCapacity)
-        </dd>
-    </dl>
 </div>
+<br/>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id },new {@class="btn btn-warning"}) &nbsp;
-    @Html.ActionLink("Back to List", "Index",null,new {@class="btn btn-info"})
+    @Html.ActionLink("Edit", "Edit","Vehicles", new { id = Model.Id },new {@class="btn btn-warning"}) &nbsp;
+    @Html.ActionLink("Back to List", "Index","Vehicles",null,new {@class="btn btn-info"})
 </p>
