--- a/RMS.App/Views/VehicleTypes/Index.cshtml
+++ b/RMS.App/Views/VehicleTypes/Index.cshtml
@@ -14,18 +14,18 @@
 }
 <div class="container">
     <div class="row align-items-center">
-        <div class="col-lg-6 col-sm-6 col-4 header-top-left no-padding">
+        <div class="col-lg-4 col-sm-4 col-4 header-top-left no-padding">
             <p>
                 @Html.ActionLink("Create New", "Create",null,new {@class="btn btn-default"})
             </p>
         </div>
 
-        <div class="col-lg-6 col-sm-6 col-8 text-right no-padding">
+        <div class="col-lg-8 col-sm-8 col-8 text-right no-padding">
             <p>
                 @using (Html.BeginForm("Index", "VehicleTypes", FormMethod.Get))
                 {
-                    <b>Search</b>
-                    @Html.TextBox("searchTextVehicleTypes")
+                    <b>Search by (Name) </b>
+                    @Html.TextBox("searchText")
                     <input type="submit" value="Search" />
                 }
             </p>
