--- a/RMS.App/Views/Shared/_MenuBar.cshtml
+++ b/RMS.App/Views/Shared/_MenuBar.cshtml
@@ -104,11 +104,11 @@
                                 </ul>
                             </li>
                             <li class="menu-has-children">
-                                <a href="#">Vehicle Types</a>
+                                <a href="#">Gate Pass</a>
 
                                 <ul>
-                                    <li>@Html.ActionLink("Create New", "Create", "VehicleTypes")</li>
-                                    <li>@Html.ActionLink("List Of Vehile Type", "Index", "VehicleTypes")</li>
+                                    <li>@Html.ActionLink("Check-Out", "Index", "GatePass")</li>
+                                    <li>@Html.ActionLink("Check-In", "CheckIn", "GatePass")</li>
                                 </ul>
                             </li>
                     </ul>        
