--- a/RMS.App/Views/Employees/Details.cshtml
+++ b/RMS.App/Views/Employees/Details.cshtml
@@ -85,11 +85,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.EmployeeTypes)
+            @Html.DisplayNameFor(model => model.EmployeeTypeId)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.EmployeeTypes)
+            @Html.DisplayFor(model => model.EmployeeType.Type)
         </dd>
 
     </dl>
