--- a/RMS.App/Views/EmployeeTypes/Delete.cshtml
+++ b/RMS.App/Views/EmployeeTypes/Delete.cshtml
@@ -1,32 +1,34 @@
-﻿@model RMS.App.ViewModels.VehicleTypeViewModel
+﻿@model RMS.App.ViewModels.EmployeeTypeViewModel
 
 @{
     ViewBag.Title = "Delete";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Delete</h2>
 
 <h3 class="text-danger">Are you sure you want to delete this?</h3>
 <div>
-    <h4>Vehicle Type</h4>
+    <h4>Employee Type</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.Type)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayFor(model => model.Type)
         </dd>
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-danger" />  &nbsp;
-            @Html.ActionLink("Back to List", "Index",null,new {@class="btn btn-info"})
+            @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-info" })
         </div>
     }
 </div>
