--- a/RMS.App/Views/EmployeeTypes/Index.cshtml
+++ b/RMS.App/Views/EmployeeTypes/Index.cshtml
@@ -1,11 +1,11 @@
-﻿@model IEnumerable<RMS.App.ViewModels.VehicleTypeViewModel>
+﻿@model IEnumerable<RMS.App.ViewModels.EmployeeTypeViewModel>
 
 @{
     ViewBag.Title = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-
-<h2>Vehicle Type List</h2>
+<h2>Employee Type List</h2>
 <br />
 @if (TempData["msg"] != null)
 {
@@ -17,13 +17,13 @@
     <div class="row align-items-center">
         <div class="col-lg-4 col-sm-4 col-4 header-top-left no-padding">
             <p>
-                @Html.ActionLink("Create New", "Create",null,new {@class="btn btn-default"})
+                @Html.ActionLink("Create New", "Create", null, new { @class = "btn btn-default" })
             </p>
         </div>
 
         <div class="col-lg-8 col-sm-8 col-8 text-right no-padding">
             <p>
-                @using (Html.BeginForm("Index", "VehicleTypes", FormMethod.Get))
+                @using (Html.BeginForm("Index", "EmployeeTypes", FormMethod.Get))
                 {
                     <b>Search by (Type) </b>
                     @Html.TextBox("searchText")
@@ -41,15 +41,16 @@
             SL
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.Type)
         </th>
         <th>
             Action
         </th>
     </tr>
+
     @{
         var sl = 0;
-        if (Model.Count()!=0)
+        if (Model.Count() != 0)
         {
             foreach (var item in Model)
             {
@@ -59,12 +60,12 @@
                         @sl
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Name)
+                        @Html.DisplayFor(modelItem => item.Type)
                     </td>
                     <td>
-                        @Html.ActionLink("Edit", "Edit", new {id = item.Id}) |
-                        @Html.ActionLink("Details", "Details", new {id = item.Id}) |
-                        @Html.ActionLink("Delete", "Delete", new {id = item.Id})
+                        @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                        @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                        @Html.ActionLink("Delete", "Delete", new { id = item.Id })
                     </td>
                 </tr>
             }
