--- a/RMS.App/Views/Employees/Create.cshtml
+++ b/RMS.App/Views/Employees/Create.cshtml
@@ -56,10 +56,10 @@
 
                     <div class="form-group row">
 
-                        @Html.LabelFor(model => model.EmployeeTypes, htmlAttributes: new { @class = "control-label col-md-2" })
+                        @Html.LabelFor(model => model.EmployeeTypeId, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-4">
-                            @Html.DropDownList("EmployeeTypes", null, "Select", htmlAttributes: new { @class = "form-control" })
-                            @Html.ValidationMessageFor(model => model.EmployeeTypes, "", new { @class = "text-danger" })
+                            @Html.DropDownList("EmployeeTypeId", null, "Select", htmlAttributes: new { @class = "form-control" })
+                            @Html.ValidationMessageFor(model => model.EmployeeTypeId, "", new { @class = "text-danger" })
                         </div>
                     </div>
 
